client/website/src/css/Conferences.css
/* Styling the scroll bar for the overview/theme */
/* width */
::-webkit-scrollbar {
  width: 6px;
}

/* Track */
::-webkit-scrollbar-track {
  background: rgb(240, 240, 240);
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--lightpurple);
  height: 20px;
  border-radius: 50px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: var(--darkpurple);
}

.loading-spinner {
  height: calc(100vh);
  width: calc(100%);
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-top: -10vh;
}

/* Design for when there is no conferences to load */
.empty-conferences {
  height: calc(80vh);
  width: calc(100vw);
  display: flex;
  align-items: center;
}

.empty-conferences p {
  font-size: 20px;
  width: 100%;
  text-align: center;
  font-family: var(--text-font);
}

.conferences-outer-container {
  width: 100%;
  margin-left: calc(101px);
  margin-right: calc(101px);
}

/* The Conferences page */
.conference-container {
  /* min-width: 440px; */
  width: calc(30.24vw);
  display: flex;
  justify-content: flex-start;
}

/* Rendering the main components on the page */
.component-display {
  display: flex;
  flex-direction: row;
  position: relative;
}

.small-desktop-div-container {
  display: flex;
  flex-direction: row;
  position: relative;
}

.conference-vertical-stepper {
  min-width: calc(200px);
  margin-top: calc(65px);
  margin-bottom: calc(170px);
}

/* Conference information */
.conference-info,
.conference-overview {
  /* min-width: 400px; */
  width: calc(30.24vw);
  margin: 15.5vh 1.5vw 9vh 1vw;
}

.conference-info-divider-div,
.conference-theme-paragraph-div {
  max-height: 342px;
  overflow-y: hidden;
}

.conference-theme-paragraph-div {
  max-height: 304px;
}

.conference-info-divider-div:hover,
.conference-theme-paragraph-div:hover {
  overflow-y: auto;
}

.conference-info-title h1 {
  font-size: calc(35px);
  font-weight: 600;
  font-family: var(--heading-font);
}

.conference-info-location {
  padding-bottom: calc(1.5vh);
}

.conference-info-resource-title {
  padding-bottom: calc(1.5vh);
  width: calc(307.2px);
}

.conference-info-resource-title h4 {
  font-size: calc(20.5px);
  font-family: var(--text-font);
}

.conference-info-divider {
  border: 1px solid var(--orange);
  width: calc(100%);
  color: white;
  background-color: var(--orange);
  font-size: calc(18px);
  margin-bottom: calc(1.5vh);
  padding-left: calc(0.5vw);
}

.program-divider {
  margin-bottom: calc(2vh);
}

.program {
  display: flex;
  flex-direction: row;
  cursor: pointer;
  margin-bottom: calc(-1vh);
  width: calc(307.2px);
  color: black;
  text-decoration: none;
}

.program p {
  margin-left: calc(0.5vw);
  margin-top: calc(-0.4vh);
  font-family: var(--text-font);
}

.conference-info-signup {
  padding-bottom: calc(1.5vh);
}

.conference-info-signup button {
  border: none;
  border-left: none;
  background-color: var(--orange);
  color: var(--white);
  font-family: var(--text-font);
  font-size: calc(20px);
  padding: 0.5vh 2vw 0.5vh 2vw;
  min-width: calc(180px);
  min-height: calc(50px);
  border-radius: calc(24.5px);
  font-weight: 600;
  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
  font-family: var(--text-font);
}

/* Slideshow section  */

.slideshow-section {
  width: calc(50.064vw - 100px);
  float: left;
  margin-top: calc(120px);
}

.slideshow-section-theme-active,
.slideshow-section-overview-active {
  border: none;
  border-left: none;
  background-color: var(--orange);
  color: var(--white);
  font-family: var(--text-font);
  font-size: calc(18px);
  min-width: calc(180px);
  min-height: calc(50px);
  border-radius: calc(24.5px);
  font-weight: 600;
  margin-left: calc(2vw);
  margin-bottom: calc(2vh);
  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
}

.slideshow-section-theme,
.slideshow-section-overview {
  border: 1.2px solid var(--black);
  background-color: transparent;
  color: var(--black);
  font-family: var(--text-font);
  font-size: calc(18px);
  min-width: calc(180px);
  min-height: calc(50px);
  border-radius: calc(24.5px);
  font-weight: 600;
  margin-left: calc(2vw);
  margin-bottom: calc(2vh);
}

.slideshow-section-theme-active,
.slideshow-section-theme {
  margin-left: 0;
}

.mobile-slideshow-label {
  position: absolute;
  width: calc(60vw);
  background: rgba(102, 82, 160, 0.85);
  z-index: 100;
  color: white;
  margin-left: calc(14vw);
  margin-top: 50px;
  padding: 30px;
}

.mobile-slideshow-label h1 {
  font-family: var(--heading-font);
  font-style: normal;
  font-weight: bold;
  font-size: calc(3vw + 2px);
}

.mobile-slideshow-label h3 {
  font-family: var(--text-font);
  font-style: normal;
  font-weight: normal;
  font-size: calc(2.2vw + 2px);
}

/* pagination styling */
.MuiPaginationItem-page.Mui-selected {
  background-color: var(--lightpurple) !important;
  color: var(--white);
}

.MuiPaginationItem-icon {
  color: var(--darkpurple) !important;
}

.conference-theme-paragraph {
  font-family: var(--text-font);
}

.conference-info-location h3 {
  font-family: var(--heading-font);
}

@media only screen and (max-width: 1200px) {
  .conference-container,
  .small-desktop-div-container {
    width: calc(53vw);
    grid-area: textArea;
  }

  .conference-vertical-stepper {
    margin-bottom: 0;
    min-width: calc(100%);
    width: calc(200px);
  }

  .conference-info,
  .conference-overview {
    min-width: calc(53vw);
    margin: 0;
    margin-top: calc(60px);
  }

  .small-desktop-div-container {
    display: flex;
    flex-direction: column;
  }

  .component-display {
    display: grid;
    grid: ". textArea";
  }

  .slideshow-section {
    width: calc(53vw);
    grid-area: slideshowArea;
    margin-top: calc(30px);
    margin-bottom: calc(90px);
  }

  .conferences-outer-container {
    width: 100%;
    margin: 0;
    padding-right: calc(10vw);
    padding-left: calc(10vw);
  }

  .conference-info-resource-title {
    padding-bottom: calc(1.5vh);
    width: calc(400.2px);
  }

  .conference-overview {
    min-width: calc(53vw);
  }
}

@media only screen and (max-width: 1050px) {
  .component-display {
    width: 100%;
    display: flex;
    flex-direction: column;
  }

  .conferences-outer-container {
    width: 100%;
    margin: 0;
    padding: 0;
  }

  .conference-vertical-stepper {
    width: 100%;
    display: flex;
    justify-content: center;
    margin: 0;
    margin-top: calc(12px);
  }

  .conference-info {
    margin: 0;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .conference-info-location {
    width: 90%;
  }

  .conference-info-location h3 {
    font-family: var(--heading-font);
    font-size: 18px;
  }

  .conference-info p {
    width: 90%;
    font-size: 18px;
    font-family: var(--text-font);
  }

  .horizontal-stepper {
    min-width: calc(50px);
  }

  .overview-header-mobile,
  .theme-header-mobile {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 50px;
  }

  .overview-header-mobile h2,
  .theme-header-mobile h2 {
    width: 90%;
    font-family: var(--heading-font);
    font-size: 30px;
    font-weight: 600;
  }

  .conference-overview {
    /* min-width: 400px; */
    width: 100%;
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-bottom: 50px;
  }

  .conference-info-resource-title {
    width: 90%;
  }

  .conference-info-resource-title h4 {
    font-size: 15px;
    width: 60%;
    font-family: var(--text-font);
  }

  .conference-info-divider-div {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .program-divider {
    width: 90%;
    border: 1px solid black;
  }

  .program {
    width: calc(90%);
    font-family: var(--text-font);
  }

  .conference-info-divider {
    width: calc(90%);
  }
}

@media only screen and (max-width: 600px) {
  .horizontal-stepper {
    min-width: calc(340px);
  }

  .mobile-slideshow-label h1 {
    font-size: calc(4vw + 2px);
  }

  .mobile-slideshow-label h3 {
    font-size: calc(3.2vw + 2px);
  }
}

@media only screen and (max-width: 350px) {
  .mobile-slideshow-label {
    position: absolute;
    width: calc(60vw);
    background: rgba(102, 82, 160, 0.85);
    z-index: 100;
    color: white;
    margin-left: calc(20vw);
    margin-top: 50px;
    padding: 30px;
  }

  .mobile-slideshow-label h1 {
    font-size: calc(5vw + 2px);
  }

  .mobile-slideshow-label h3 {
    font-size: calc(4.2vw + 2px);
  }
}

